# QStyleDemo

./: README.md
QStyleDemo/: CMakeLists.txt  fontStyleDefines.h  main.cpp  res.qrc  styletitlebar.cpp  styletitlebar.h  styletitlebar.ui  widget.cpp  widget.h  widget.ui
QStyleDemo/res/qss/: black.css
